--- a/school/requirements.txt
+++ b/school/requirements.txt
@@ -6,7 +6,9 @@ Django==4.2.7
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 filelock==3.9.0
+gunicorn==21.2.0
 idna==3.4
+packaging==23.2
 Pillow==10.1.0
 pipenv==2022.12.19
 platformdirs==2.6.2
